# HaikuAtlas

./: .gitignore  CHANGELOG.md  LICENSE  README.md  atlas  atlas-indexer  atlas-indexer.bat  atlas.bat  pyproject.toml
data/: schema.sql
docs/: Haiku Atlas implementation plan.md  Haiku Atlas seed.md  changelog.md  cli-reference  cross-platform-validation.md  index-format-v0.md  usage-guide.md  v1-roadmap.md
src/haiku_atlas/: __init__.py  db.py  file_index.py  kits.py  parser.py  query.py  setup.py  web.py
src/haiku_atlas/cli/: __init__.py  help.py  indexer.py  query.py
tests/: test_cli.py  test_db.py  test_file_index.py  test_kits.py  test_parser.py  test_query.py  test_setup.py  test_web.py
tests/fixtures/real_api/: Application_excerpt.h  Message_excerpt.h  View_excerpt.h  Window_excerpt.h
tests/fixtures/simple_api/: View.h
