[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "haiku-atlas"
version = "0.1.0"
description = "A local atlas for exploring the Haiku API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Haiku Atlas contributors" }
]
dependencies = []

[project.scripts]
atlas-indexer = "haiku_atlas.cli.indexer:main"
atlas-query = "haiku_atlas.cli.query:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
haiku_atlas = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

